--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,27 @@ license = "GPL-3.0-or-later"
 [lib]
 name = "heatwave"
 path = "src/heatwave.rs"
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-env_logger = "0.10.1"
+env_logger = "0.11.1"
 log = "0.4.20"
-wgpu = "0.18.0"
-winit = { version="0.29.4", features = ["rwh_05" ]}
+wgpu = "0.19.1"
+winit = { version="0.29.4", features = ["rwh_06" ]}
 pollster = "0.3"
 bytemuck = { version="1.14.0", features=["derive"]}
 image = { version="0.24.7", features=["png"], default-features = false}
+raw-window-handle = "0.6.0"
+cfg-if = "1.0.0"
+
 
 [dev-dependencies]
 inventory = "0.3.13"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook = "0.1.7"
+console_log = "1.0"
+wgpu = { version = "0.19.1", features = ["webgl"]}
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4.40"
+web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
